--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -13,7 +13,7 @@
 
 - name: install | download deb
   get_url:
-    url: "https://downloads.slack-edge.com/linux_releases/slack-desktop-{{ slack_version }}-{{ slack_machine_map[ansible_machine] }}.deb"
+    url: "https://downloads.slack-edge.com/releases/linux/{{ slack_version }}/prod/x64/slack-desktop-{{ slack_version }}-{{ slack_machine_map[ansible_machine] }}.deb"
     dest: "{{ slack_downloads_path }}/slack-desktop-{{ slack_version }}-{{ slack_machine_map[ansible_machine] }}.deb"
     owner: root
     group: root
